<resources>
    <string name="app_name">StepOut_demo</string>
    <string name="app_title">StepOut</string>
    <string name="login_text_box1">Create a New Account</string>
    <string name="login_text_box2">For the best experience\n with StepOut</string>
    <string name="email_sign_up">SIGN UP WITH EMAIL</string>
    <string name="sing_up_phone_no">SIGN UP WITH PHONE NUMBER</string>
    <string name="email_login">LOGIN WITH EMAIL</string>
    <string name="login_phone_no">LOGIN WITH PHONE NUMBER</string>
    <string name="password_hint">••••••••••</string>
    <string name="skip_text">SKIP</string>
    <string name="signup1_text">Hello! Please tell us a little bit \nabout yourself.</string>
    <string name="name">Name</string>
    <string name="your_name_hint">Your Name</string>
    <string name="email_address">Email address</string>
    <string name="email_address_hint">Your email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next_btn_text">NEXT</string>
    <string name="signup2_text1">Add your profile picture.</string>
    <string name="add_fav_sport">Add Your \nFavourite Sport</string>
    <string name="to_your_personalized_profile">To Your Personalized Profile</string>
    <string name="done">DONE</string>
    <string name="thanks_nyou_are_ready_to_go">Thanks! \nYou are ready to go.</string>
    <string name="welcome_user">Welcome User</string>
    <string name="submit_btn_text">Go Ahead and Explore</string>
    <string name="overlay_options_home">Home</string>
    <string name="overlay_options_explore">Explore</string>
    <string name="overlay_options_profile">Profile</string>
    <string name="overlay_options_league">League</string>
    <string name="overlay_options_tournament">Tournament</string>
    <string name="overlay_options_settings">Settings</string>
</resources>
