<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@color/overlay_bg_color">

    <ImageView
        android:id="@+id/drawer_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        android:layout_marginTop="@dimen/margin_avg"
        android:layout_marginLeft="@dimen/margin_low"/>

    <LinearLayout
        android:id="@+id/overlay_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawer_close"
        android:layout_marginTop="@dimen/margin_low"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_home"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_explore"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_profile"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_league"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_tournament"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/overlay_options_settings"
            android:textSize="@dimen/overlay_drawer_text_size"
            android:textColor="@color/overlay_drawer_text_color"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo_overlay_drawer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_low"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>